# HoosHungryBackend

./: .gitignore
HoosHungryBackend/: pyproject.toml
HoosHungryBackend/hooshungrybackend/: .gitignore  Dockerfile  celerybeat-schedule  celerybeat-schedule.db  db.sqlite3  docker-compose.yml  pyproject.toml  railway.toml
HoosHungryBackend/hooshungrybackend/accounts/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
HoosHungryBackend/hooshungrybackend/accounts/migrations/: 0001_initial.py  0002_userprofile_default_calorie_goal_and_more.py  0003_userprofile_dietary_prefs.py  0004_add_goal_type_activity_level.py  0005_userprofile_default_fiber_goal_and_more.py  0006_favoriteitem.py  0007_itemrating.py
HoosHungryBackend/hooshungrybackend/api/: importers.py  models.py  scrapers.py  serializers.py  tasks.py  urls.py  views.py
HoosHungryBackend/hooshungrybackend/api/migrations/: 0001_initial.py  0002_day_day_name.py  0002_fix_nutrition_max_digits.py  0003_rename_type_period_name.py  0004_remove_menuitem_ingredients_delete_ingredient_and_more.py  0005_rename_carbs_nutritioninfo_total_carbohydrates_and_more.py  0006_rename_fiber_nutritioninfo_dietary_fiber_and_more.py  0007_nutritioninfo_cholesterol.py  (+1 more)
HoosHungryBackend/hooshungrybackend/config/: celery.py  scheduler.py  settings.py  urls.py  wsgi.py
HoosHungryBackend/hooshungrybackend/plans/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
HoosHungryBackend/hooshungrybackend/prompt/: apps.py  models.py  tests.py  urls.py  views.py
HoosHungryBackend/project_tests/: test_models.py
(+17 files in other folders)
